# clarity-chat

./: .env  README.md  package-lock.json  tailwind.config.ts
backend/: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
backend/api/: models.py  prompts.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/chat_backend/: .env.example  asgi.py  settings.py  wsgi.py
django_backend/: README.md  requirements.txt
django_backend/chat/: llm_gateway.py  models.py  services.py  views.py
django_backend/config/: settings.py
frontend/: pnpm-lock.yaml
frontend/src/: index.css
frontend/src/components/: ChatMessage.tsx  HighlightPopover.tsx  LearningChat.tsx  TopicSelector.tsx
frontend/src/integrations/supabase/: types.ts
frontend/supabase/: config.toml
frontend/supabase/functions/main-chat/: index.ts
frontend/supabase/functions/side-chat/: index.ts
src/components/: ChatInput.tsx  SidePanel.tsx
src/lib/: api.ts
src/pages/: Index.tsx
supabase/functions/main-chat/: index.ts
supabase/functions/side-chat/: index.ts
supabase/migrations/: 20260201090256_44cb0c30-c229-4695-88ae-4f4e69557fb9.sql
