[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0,<6.0",
    "django-cors-headers>=4.3,<5.0",
    "djangorestframework>=3.15,<4.0",
    "gunicorn>=22.0,<23.0",
    "openai>=1.40.0",
    "psycopg2-binary>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0",
]
